--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,5 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -15,12 +13,19 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+div.grid {
+  display: table;
+}
+div.grid>div {
+  display: table-row;
+}
+div.grid>div>div {
+  display: table-cell;
+  padding: 10px 20px;
+}
+
+div.custom-logic {
+  background-color: bisque;
+  padding: 20px;
+  margin: 10px 0;
 }
